# battery-frontier-mission

./: .gitattributes  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  daily-report.yml  metadata-ingestion.yml  pages.yml
configs/: aircraft_systems.yaml  assumptions.yaml  aviation_scenarios.yaml  chemistry_families.yaml  citations.yaml  data_sources.yaml  dataset_candidates.yaml  material_candidates.yaml  physics_reference_cases.yaml  propulsion_systems.yaml  segmented_mission_cases.yaml
dashboard/: app.py
docker/: README.md
docs/: architecture.md  assumptions.md  contribution_guide.md  data_dictionary.md  data_sources.md  deployment.md  equations.md  limitations.md  materials_campaign.md  phase2_reference_cases.md  phase3_aviation_model.md  phase4_dashboard.md  roadmap.md  scientific_scope.md
notebooks/: README.md
reports/aviation/: phase3_mission_cases.json
reports/candidates/: candidate_dossiers.json  candidate_dossiers.md
schemas/: 001_initial.sql
tests/: test_candidate_dossiers.py  test_cmu_evtol_ingestion.py  test_dashboard.py  test_dashboard_data.py  test_data_connectors.py  test_db.py  test_derating.py  test_electrochemistry.py  test_materials_campaign.py  test_method_cards.py  test_mission.py  test_partner_dossiers.py  test_phase2_physics.py  test_phase3_aviation.py  test_registry.py  test_reporting.py  test_schema.py  test_scientific_audit.py  test_simulation_campaign.py  test_website_export.py
website/: README.md  app.js  index.html  mission-control-data.json  styles.css
(+146 files in other folders)
