[build-system]
requires = ["setuptools>=75"]
build-backend = "setuptools.build_meta"

[project]
name = "battery-frontier-mission"
version = "0.4.0"
description = "Transparent battery-materials screening and aviation mission research platform."
readme = "README.md"
license = "BSD-3-Clause"
requires-python = ">=3.11"
dependencies = [
  "duckdb>=1.1,<2",
  "pandas>=2.2,<3",
  "plotly>=5.24,<7",
  "pydantic>=2.9,<3",
  "pyyaml>=6,<7",
  "streamlit>=1.40,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<10",
  "pytest-cov>=5,<7",
  "ruff>=0.8,<1",
]

[project.scripts]
battery-frontier = "battery_frontier.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q --basetemp=.pytest_tmp"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
